updated icons, changed version, fix some toolapp layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,22 +8,26 @@ body{
     color: #fff;
     font-family: 'Calibri', 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
 }
+img{
+  width: 40px;
+  height: auto;
+}
 #main{
 background-color: #192027;
 max-width: 100%;
 margin: auto;
 border-radius:5px;
 height: auto;
-padding:10px;
+padding:3%;
 }
 #nextSwitch {
   height: auto;
-  width: auto;
+  width: 97%;
   outline: none;
   background-color: #097b71;
-  outline: none;
   border: none;
-  padding: 3px;
+  padding: 1%;
+  margin:auto;
   border-radius:3px;
 }
 #nextSwitchTime{
@@ -74,7 +78,7 @@ button:hover{
   color: #fff;
 }
 .mainText{
-  font-size: 14px;
+  font-size: 16px;
   color: #47f685;
 }
 #startDark{
